Corrected display of the banner on mobile

--- a/src/components/banner/banner.css
+++ b/src/components/banner/banner.css
@@ -37,11 +37,13 @@
     .banner {
         margin: 40px 2.5%;
         width: 95%;
+        height: 112px;
         border-radius: 10px;
     } 
     .banner_text {
         font-size: 24px;
         left: 15px;
         transform: translateY(-50%);
+        text-align: left;
     }
 }
